# Hack-1st

./: .gitignore  README.md
backend/: API_INTEGRATION.md  README.md  pyproject.toml  run_server.py
backend/data/RAG/: law_db_metadata.json
backend/data_generator/vectorDB/: README.md  SETUP_AND_TEST.md  env_loader.py  rag_data_generator.py  rag_data_tester.py  requirements.txt
backend/src/backend/: main.py
backend/src/backend/agents/: agents.py  schemas.py  workflow.py
docs/: agents.md  기능목록.md
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: startup.ts
frontend/src/components/: StepProgress.tsx
frontend/src/components/roadmap/: FundingTools.tsx  LocationTools.tsx  MenuTools.tsx  OperationTools.tsx
frontend/src/components/ui/: button.tsx  progress.tsx
frontend/src/contexts/: FormContext.tsx
frontend/src/data/: korean_job_categories_dataset.json
frontend/src/pages/: BusinessGoals.tsx  Confirmation.tsx  ContentsList.tsx  DistrictSelection.tsx  Index.tsx  IndustryCategorySelection.tsx  IndustryDetailSelection.tsx  IndustrySelection.tsx  IntroVideo.tsx  LocationSelection.tsx  ProfileInfo.tsx  ProjectType.tsx  Roadmap.tsx  RoadmapLoading.tsx  SelectionSummary.tsx  VisionValues.tsx  Welcome.tsx
