[project]
name = "backend"
version = "0.1.0"
description = "F&B Startup Navigator - AI Multi-Agent System"
readme = "README.md"
authors = [
    { name = "soonvro", email = "soonvro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "litellm>=1.79.1",
    "google-adk>=1.17.0",
    "boto3>=1.40.64",
    "nest-asyncio>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.7",
    "requests>=2.32.0",
]
